# python-template

./: Dockerfile  README.md
.github/workflows/: cd.yaml  ci.yaml
src/: api.py  main.py  solver.py  worker.py
src/my_classes/: mybehaviorclass.py  mydataclass.py
src/my_classes_lib/: README.md  pyproject.toml
src/my_classes_lib/my_classes/: mybasemodelclass.py
src/my_types/: mylinkedlist.py
src/tests/: test_solver.py
