[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "my_classes_lib"
version = "0.1.0"
authors = [{ name = "Your Name", email = "you@example.com" }]
description = "Library with my custom classes"
readme = "README.md"
requires-python = ">=3.9"
dependencies = []

[tool.setuptools.packages.find]
where = ["."]
